Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
eazyBI
Give feedback to Atlassian
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Acknowledged notifications
Core Server
SERVER-61120
Traverse stage is missing nestedArraysDepth from its debug output
Undo Transition
Closed
Export
null
XML
Word
Printable
JSON
Details
Type:
Bug
Resolution:
Fixed
Priority:
Minor - P4
Fix Version/s:
6.1.0-rc0
Affects Version/s:
None
Component/s:
None
Labels:
neweng
Field Tab
Aha! Info
Backwards Compatibility:
Fully Compatible
Operating System:
ALL
Sprint:
QE 2022-06-27, QE 2022-07-11
CAR Domain/s:
None
Aha! Reference:
None
Tracking Level:
None
Risk Status:
None
Exec Notes:
None
Goal Name(s):
None
Goal Link:
None
Description
It's hard to diagnose subtle bugs if that flag is missing.
It's trivial to fix.
Attachments
Activity
People
Assignee:
Alberto Massari
Reporter:
Martin Neupauer (Inactive)
Participants:
Alberto Massari
,
Githook User
,
Martin Neupauer
Votes
:
0
Vote for this issue
Watchers:
7
Start watching this issue
Dates
Created:
Oct 29 2021 08:52:12 PM UTC
Updated:
Oct 29 2023 09:46:42 PM UTC
Resolved:
Jun 29 2022 10:30:49 AM UTC
PagerDuty