SERVER-61120 Include nestedArraysDepth in the debugPrint output of the Traverse stage